支持提前配置保存客户端密钥的路径

--- a/proxy-server/pom.xml
+++ b/proxy-server/pom.xml
@@ -9,6 +9,7 @@
     <artifactId>proxy-server</artifactId>
     <packaging>jar</packaging>
     <name>proxy-server</name>
+    <version>0.2</version>
     <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
