--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,110 @@
 .*
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+### JetBrains template
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+
+# Generated files
+.idea/**/contentModel.xml
+
+# Sensitive or high-churn files
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+.idea/**/dbnavigator.xml
+
+# Gradle
+.idea/**/gradle.xml
+.idea/**/libraries
+
+# Gradle and Maven with auto-import
+# When using Gradle or Maven with auto-import, you should exclude module files,
+# since they will be recreated, and may cause churn.  Uncomment if using
+# auto-import.
+# .idea/modules.xml
+# .idea/*.iml
+# .idea/modules
+# *.iml
+# *.ipr
+
+# CMake
+cmake-build-*/
+
+# Mongo Explorer plugin
+.idea/**/mongoSettings.xml
+
+# File-based project format
+*.iws
+
+# IntelliJ
+out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Cursive Clojure plugin
+.idea/replstate.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+
+# Editor-based Rest Client
+.idea/httpRequests
+
+# Android studio 3.1+ serialized cache file
+.idea/caches/build_file_checksums.ser
+
+lanproxy.iml
+proxy-client/proxy-client.iml
+proxy-client/target/classes/config.properties
+proxy-client/target/classes/log4j.properties
+proxy-client/target/classes/startup.bat
+proxy-client/target/classes/startup.sh
+proxy-client/target/classes/stop.sh
+proxy-client/target/classes/test.jks
+proxy-client/target/generated-sources/
+proxy-client/target/generated-test-sources/
+proxy-client/target/maven-archiver/
+proxy-client/target/maven-status/
+proxy-client/target/test-classes/config.properties
+proxy-client/target/test-classes/log4j.properties
+proxy-client/target/test-classes/test.jks
+proxy-common/proxy-common.iml
+proxy-common/target/generated-sources/
+proxy-common/target/maven-archiver/
+proxy-common/target/maven-status/
+proxy-protocol/proxy-protocol.iml
+proxy-protocol/target/generated-sources/
+proxy-protocol/target/maven-archiver/
+proxy-protocol/target/maven-status/
+proxy-server/proxy-server.iml
+proxy-server/target/classes/config.properties
+proxy-server/target/classes/log4j.properties
+proxy-server/target/classes/startup.bat
+proxy-server/target/classes/startup.sh
+proxy-server/target/classes/stop.sh
+proxy-server/target/classes/test.jks
+proxy-server/target/generated-sources/
+proxy-server/target/generated-test-sources/
+proxy-server/target/maven-archiver/
+proxy-server/target/maven-status/
+proxy-server/target/test-classes/config.properties
+proxy-server/target/test-classes/log4j.properties
+proxy-server/target/test-classes/test.jks
